--- a/index.html
+++ b/index.html
@@ -19,8 +19,45 @@
         <label for="add2">2nd number:</label>
         <input id="add2" class="form-control" type="text">
       </div>
-      <button type="submit" class="btn">Add!</button>
+      <button type="submit" class="btn btn-success">Add!</button>
     </form>
+
+    <form id="subtract">
+      <div class="form-group">
+        <label for="subtract1">1st number:</label>
+        <input id="subtract1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="subtract2">2nd number:</label>
+        <input id="subtract2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn btn-success">Subtract!</button>
+    </form>
+
+    <form id="multiply">
+      <div class="form-group">
+        <label for="multiply1">1st number:</label>
+        <input id="multiply1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="multiply2">2nd number:</label>
+        <input id="multiply2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn btn-success">Multiply!</button>
+    </form>
+
+    <form id="divide">
+      <div class="form-group">
+        <label for="divide1">1st number:</label>
+        <input id="divide1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="divide2">2nd number:</label>
+        <input id="divide2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn btn-success">Divide!</button>
+    </form>
+    
     <div id="output">
       
     </div>
